--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "license": "ISC",
   "devDependencies": {
     "copy-webpack-plugin": "^8.1.0",
+    "css-loader": "^6.5.1",
     "handlebars": "^4.7.7",
     "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^5.3.1",
+    "sass": "^1.43.5",
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.1",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.3",
     "webpack": "^5.28.0",
