--- a/package.json
+++ b/package.json
@@ -12,22 +12,15 @@
   "license": "ISC",
   "devDependencies": {
     "copy-webpack-plugin": "^8.1.0",
-    "css-loader": "^6.5.1",
-    "handlebars": "^4.7.7",
-    "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^5.3.1",
-    "sass": "^1.43.5",
-    "sass-loader": "^12.3.0",
-    "style-loader": "^3.3.1",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.3",
-    "webpack": "^5.28.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-glsl-loader": "^1.0.1",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.0.0",
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
-    "@babylonjs/core": "^4.2.0"
+    "brix": "../Engine/dist"
   }
 }
