--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
-    "brix": "../Engine/dist"
+    "@ludum_studios/brix-core": "0.0.2"
   }
 }
